update homepage to fetch from collection

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
             </h3>
             <h3 class="top-page-prod__product-name">Glorious Model O 2</h3>
             <h3 class="top-page-prod__product-subname">Wireless</h3>
-            <a href="" class="top-page-prod__view-button">Xem thêm</a>
+            <a
+              href="/product-detail.html?slug=chut-khng-dy-siu-nh-glorious-model-o-2-wireless--matte&productId=26"
+              class="top-page-prod__view-button"
+              >Xem thêm</a
+            >
           </div>
         </div>
       </section>
@@ -373,168 +377,14 @@
       </section>
 
       <!-- Section trending products 1-->
-      <section class="trend-prod-1">
-        <div class="container-1600">
-          <ul class="trend-prod-1__product-list">
-            <li class="trend-prod-1__item trend-prod-1__item-1">
-              <a href="" class="trend-prod-1__item-link">
-                <img
-                  class="trend-prod-1__item-img"
-                  src="./assets/imgs/home/mock-banner-1.webp"
-                  alt="Product banner"
-                />
-                <h3 class="trend-prod-1__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-1__item trend-prod-1__item-2">
-              <a href="" class="trend-prod-1__item-link">
-                <img
-                  class="trend-prod-1__item-img"
-                  src="./assets/imgs/home/mock-banner-1.webp"
-                  alt="Product banner"
-                />
-                <h3 class="trend-prod-1__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-1__item trend-prod-1__item-3">
-              <a href="" class="trend-prod-1__item-link">
-                <img
-                  class="trend-prod-1__item-img"
-                  src="./assets/imgs/home/mock-banner-1.webp"
-                  alt="Product banner"
-                />
-                <h3 class="trend-prod-1__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-1__item trend-prod-1__item-4">
-              <a href="" class="trend-prod-1__item-link">
-                <img
-                  class="trend-prod-1__item-img"
-                  src="./assets/imgs/home/mock-banner-1.webp"
-                  alt="Product banner"
-                />
-                <h3 class="trend-prod-1__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-1__item trend-prod-1__item-5">
-              <a href="" class="trend-prod-1__item-link">
-                <img
-                  class="trend-prod-1__item-img"
-                  src="./assets/imgs/home/mock-banner-1.webp"
-                  alt="Product banner"
-                />
-                <h3 class="trend-prod-1__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-1__item trend-prod-1__item-6">
-              <a href="" class="trend-prod-1__item-link">
-                <img
-                  class="trend-prod-1__item-img"
-                  src="./assets/imgs/home/mock-banner-1.webp"
-                  alt="Product banner"
-                />
-                <h3 class="trend-prod-1__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-1__item trend-prod-1__item-7">
-              <a href="" class="trend-prod-1__item-link">
-                <img
-                  class="trend-prod-1__item-img"
-                  src="./assets/imgs/home/mock-banner-1.webp"
-                  alt="Product banner"
-                />
-                <h3 class="trend-prod-1__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
+      <section class="trend-prod-1"></section>
 
       <!-- Section trending products 2 -->
       <section class="trend-prod-2"></section>
 
       <!-- Section trending products 3 -->
-      <section class="trend-prod-3">
-        <div class="container-1600">
-          <ul class="trend-prod-3__product-list">
-            <li class="trend-prod-3__item trend-prod-3__item-1">
-              <a href="" class="trend-prod-3__item-link">
-                <img
-                  src="./assets/imgs/home/mock-banner-3.webp"
-                  alt="Product banner image"
-                  class="trend-prod-3__item-img"
-                />
-                <h3 class="trend-prod-3__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-3__item trend-prod-3__item-2">
-              <a href="" class="trend-prod-3__item-link">
-                <img
-                  src="./assets/imgs/home/mock-banner-3.webp"
-                  alt="Product banner image"
-                  class="trend-prod-3__item-img"
-                />
-                <h3 class="trend-prod-3__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-3__item trend-prod-3__item-3">
-              <a href="" class="trend-prod-3__item-link">
-                <img
-                  src="./assets/imgs/home/mock-banner-3.webp"
-                  alt="Product banner image"
-                  class="trend-prod-3__item-img"
-                />
-                <h3 class="trend-prod-3__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-3__item trend-prod-3__item-4">
-              <a href="" class="trend-prod-3__item-link">
-                <img
-                  src="./assets/imgs/home/mock-banner-3.webp"
-                  alt="Product banner image"
-                  class="trend-prod-3__item-img"
-                />
-                <h3 class="trend-prod-3__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-            <li class="trend-prod-3__item trend-prod-3__item-5">
-              <a href="" class="trend-prod-3__item-link">
-                <img
-                  src="./assets/imgs/home/mock-banner-3.webp"
-                  alt="Product banner image"
-                  class="trend-prod-3__item-img"
-                />
-                <h3 class="trend-prod-3__item-title">
-                  Glorious Series One Pro
-                </h3>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
+      <section class="trend-prod-3"></section>
+      z
       <!-- Footer -->
       <footer class="footer"></footer>
     </div>
@@ -542,7 +392,9 @@
     <script type="module">
       import { renderHeader } from './assets/js/commons/header/header.js';
       import { renderFooter } from './assets/js/commons/footer.js';
+      import { renderSectionTrendingProduct1 } from './assets/js/home/section-trending-product-1.js';
       import { renderSectionTrendingProduct2 } from './assets/js/home/section-trending-product-2.js';
+      import { renderSectionTrendingProduct3 } from './assets/js/home/section-trending-product-3.js';
 
       const header = document.querySelector('header.header');
       renderHeader(header, true);
@@ -550,8 +402,14 @@
       const footer = document.querySelector('footer.footer');
       renderFooter(footer);
 
+      const trendProd1 = document.querySelector('section.trend-prod-1');
+      renderSectionTrendingProduct1(trendProd1);
+
       const trendProd2 = document.querySelector('section.trend-prod-2');
       renderSectionTrendingProduct2(trendProd2);
+
+      const trendProd3 = document.querySelector('section.trend-prod-3');
+      renderSectionTrendingProduct3(trendProd3);
     </script>
   </body>
 </html>
